<resources>
    <string name="app_name">Moviie</string>
    <string name="no_movies_added">Aucun film à afficher</string>

    <string-array name="activity_main_spinner">
        <item>Tous mes films</item>
        <item>Films à voir</item>
        <item>Films déjà vus</item>
    </string-array>
    <string name="title_activity_recent_movies">RecentMoviesActivity</string>
    <string name="movie_title">Films</string>
    <string name="seen_icon">Seen icon</string>
    <string name="retry">Réessayer</string>
    <string name="image_movie">Movie image</string>
    <string name="movie_star_image">Movie star image</string>
    <string name="seen">Vu</string>
    <string name="synopsis">Synopsis</string>
    <string name="date">Date de sortie</string>
    <string name="famous">Populaires</string>
    <string name="top_rated">Mieux notés</string>
    <string name="upcoming">À venir</string>
    <string name="movie_activity_title">Movie Activity</string>
    <string name="about">A propos</string>
    <string name="share_seen">Faut absolument que tu regardes %s !</string>
    <string name="share_not_seen">Ça te dit de regarder %s ?</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="logo">Logo</string>
    <string name="tmdb_about">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="signature">Développé par Nicolas Mandica.</string>
</resources>
