<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/app_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="?colorPrimary">

            <ImageView
                android:id="@+id/image"
                android:layout_width="fill_parent"
                android:layout_height="300.0dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_movie" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="fill_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16.0dp"
                android:layout_marginTop="4.0dp"
                android:layout_marginRight="16.0dp"
                android:layout_marginBottom="4.0dp">

                <ImageView
                    android:id="@+id/star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4.0dp"
                    android:layout_marginEnd="4.0dp"
                    android:src="@drawable/ic_star_black_24dp"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/movie_star_image" />

                <TextView
                    android:textSize="16.0sp"
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8.0dp"
                    android:layout_marginEnd="8.0dp"
                    android:layout_toRightOf="@id/star"
                    android:layout_toEndOf="@id/star"
                    android:layout_centerVertical="true" />

                <CheckBox
                    android:textSize="16.0sp"
                    android:id="@+id/seenCheckBox"
                    android:paddingLeft="4.0dp"
                    android:paddingStart="4.0dp"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seen"
                    android:layout_toRightOf="@id/rating"
                    android:layout_toEndOf="@id/rating"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16.0dp"
                android:layout_marginRight="16.0dp"
                android:layout_marginBottom="8.0dp">

                <TextView
                    android:textSize="16.0sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/synopsis" />

                <TextView
                    android:textSize="16.0sp"
                    android:id="@+id/synopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="16.0sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8.0dp"
                    android:text="@string/date" />

                <TextView
                    android:textSize="16.0sp"
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/actionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_add_black_24dp"
        android:tint="#ffffffff"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="end|bottom|center" />

</android.support.design.widget.CoordinatorLayout>